<resources>
    <string name="app_name">Random Users Generator</string>

    <string name="label_input_number">Input a number</string>
    <string name="hint_search">up to 5000 only</string>
    <string name="button_search">Search</string>
    <string name="label_address">Address</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_gender">Gender</string>
    <string name="label_age">Age</string>
    <string name="label_phone">Phone</string>
    <string name="label_cell">Cell</string>
    <string name="label_email">Email Address</string>

    <string name="msg_network_error">Network Error</string>
    <string name="msg_no_internet_connection">No internet connection</string>
    <string name="msg_network_failure">Network Failure</string>
    <string name="msg_conversion_error">Conversion Error</string>
</resources>