<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="dev.carlodips.albertsoncodingassignment.ui.details.RandomUserDetailsViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageviewUser"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="24dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{vm.ldRandomUserBean.picture.large}"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".5"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                tools:src="@drawable/ic_person"/>

            <TextView
                android:id="@+id/textviewFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{String.valueOf(vm.ldRandomUserBean.displayName)}"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageviewUser"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/textviewGenderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/label_gender"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewFullName" />

            <TextView
                android:id="@+id/textviewGenderValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.gender)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewGenderLabel"
                tools:text="Male" />


            <TextView
                android:id="@+id/textviewAgeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_age"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewGenderValue" />

            <TextView
                android:id="@+id/textviewAgeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.dob.age)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewAgeLabel"
                tools:text="Manila, PH" />

            <TextView
                android:id="@+id/textviewDobLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_dob"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewAgeValue" />

            <TextView
                android:id="@+id/textviewDobValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.dob.date)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewDobLabel"
                tools:text="October 9, 1999" />

            <TextView
                android:id="@+id/textviewAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_address"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewDobValue" />

            <TextView
                android:id="@+id/textviewAddressValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.displayAddress)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewAddressLabel"
                tools:text="Manila, PH" />

            <TextView
                android:id="@+id/textviewPhoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_phone"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewAddressValue" />

            <TextView
                android:id="@+id/textviewPhoneValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.phone)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewPhoneLabel"
                tools:text="0999 999 9999" />

            <TextView
                android:id="@+id/textviewCellLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_cell"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewPhoneValue" />

            <TextView
                android:id="@+id/textviewCellValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.cell)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewCellLabel"
                tools:text="0900 000 0000" />

            <TextView
                android:id="@+id/textviewEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_email"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewCellValue" />

            <TextView
                android:id="@+id/textviewEmailValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="32dp"
                android:text="@{String.valueOf(vm.ldRandomUserBean.email)}"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textviewEmailLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="johndoe@example.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>